--- a/templates/vistaCodigoVuelo.html
+++ b/templates/vistaCodigoVuelo.html
@@ -22,24 +22,35 @@
 </head>
 
 <body class="w3-light-grey">
-    <div class="w3-main" style="margin-left:300px;margin-top:43px;">
+    <div class="w3-main" style="margin-left: 300px; margin-top: 43px;">
         <div class="w3-panel">
-            <div style="display: flex; align-items: center;">
-                <i class="fa fa-plane w3-text-blue w3-xxlarge"></i>
-                <h2 style="margin-left: 10px;">CONSULTAS</h2>
-            </div>
-            <div class="w3-row-padding" style="margin:0 -16px">
-                <div class="w3-twothird">                                    
-                    <form method="POST" action="/get_flights_by_code">
-                        <label for="letra">Filtro por código de vuelo:</label>
-                        <input type="text" name="codigoVuelo" id="codigoVuelo">
-                        <input type="submit" value="Obtener información del vuelo">
-                    </form>
-                </div>
-            </div>
+            <h2>Información de vuelo</h2>
+            <table class="w3-table w3-bordered">
+                <caption>Vuelo</caption>
+                <tr>
+                    <th>Aerolínea</th>
+                    <th>Procedencia</th>
+                    <th>Destino</th>
+                    <th>Hora de salida</th>
+                    <th>Hora de Llegada Estimada</th>
+                    <th>Estado</th>
+                </tr>
+                {% for dato in vuelo %}
+                <tr>
+                    <td>{{ dato.airline }}</td>
+                    <td>{{ dato.departure }}</td>
+                    <td>{{ dato.destination }}</td>
+                    <td>{{ dato.departure_time }}</td>
+                    <td>{{ dato.estimated_arrival }}</td>
+                    <td>{{ dato.status}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+            <br>
         </div>
     </div>
-
 </body>
+
+</html>
 
 </html>
