--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                     <br>
                     <form method="POST" action="/get_flights_by_code">
                         <label for="letra">Ver información por código de vuelo:</label>
-                        <input type="text" name="flight_number" id="flight_number" required>
+                        <input type="text" name="iataVuelo" id="iataVuelo" required>
                         <input type="submit" value="Mostrar">
                     </form>
                 </div>
