--- a/templates/vistaClima.html
+++ b/templates/vistaClima.html
@@ -37,3 +37,9 @@
         </li>
     {% endfor %}
     </ul>
+
+    <form method="GET" action="/">
+        <input type="submit" value="Regresar">
+    </form>
+    
+</body>
