--- a/templates/vistaVuelosRuta.html
+++ b/templates/vistaVuelosRuta.html
@@ -35,7 +35,7 @@
         {% for flight in flights %}
         <tr>
             <td>{{ flight.airline }}</td>
-            <td>{{ flight.flight_number }}</td>
+            <td>{{ flight.flight_iata }}</td>
             <td>{{ flight.status }}</td>
             <td>{{ flight.departure_scheduled }}</td>
             <td>{{ flight.arrival_scheduled }}</td>
