--- a/templates/vistaAeropuertos.html
+++ b/templates/vistaAeropuertos.html
@@ -37,5 +37,9 @@
     <form method="GET" action="/">
         <input type="submit" value="Regresar">
     </form>
+
+    <form method="GET" action="/">
+        <input type="submit" value="Regresar">
+    </form>
 </body>
 </html>
