--- a/templates/vistaVuelosActuales.html
+++ b/templates/vistaVuelosActuales.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="w3-light-grey">
-    <div class="w3-main" style="margin-left: 300px; margin-top: 43px;">
+    <div class="w3-main" style="margin-left: 30px; margin-top: 43px;">
         <div class="w3-panel">
             <h2>Vuelos Actuales</h2>
             <table class="w3-table w3-bordered">
@@ -35,15 +35,20 @@
                 {% for vuelo in vuelos %}
                 <tr>
                     <td>{{ vuelo.airline }}</td>
-                    <td>{{ vuelo.flight_number }}</td>
+                    <td>{{ vuelo.flight_iata }}</td>
                     <td>{{ vuelo.departure }}</td>
                     <td>{{ vuelo.estimated_arrival }}</td>
                 </tr>
                 {% endfor %}
+                <td>----------Ultima linea----------</td>
             </table>
             <br>
         </div>
     </div>
+
+    <form method="GET" action="/">
+        <input type="submit" value="Regresar">
+    </form>
 </body>
 
 </html>
