--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,11 @@
     <title>MenuPrincipal</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        html,
-        body,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5 {
-            font-family: "Raleway", sans-serif
-        }
-    </style>
+
 </head>
 
 <body class="w3-light-grey">
@@ -29,17 +20,17 @@
                 <h2 style="margin-left: 10px;">CONSULTAS</h2>
             </div>
             <div class="w3-row-padding" style="margin:0 -16px">
-                <div class="w3-twothird">                                    
+                <div class="w3-twothird">
                     <form method="POST" action="/get_airports">
                         <label for="letra">Filtro por Aeropuerto:</label>
                         <input type="text" name="letra" id="letra">
-                        <input type="submit" value="Obtener Aeropuertos">
+                        <input type="submit" value="Obtener Aeropuertos" class="button">
                     </form>
                     <br>
                     <form method="POST" action="/getVuelosActuales">
                         <label for="letra">Ver vuelos esperados de aeropuerto por IATA:</label>
                         <input type="text" name="iata" id="iata" required>
-                        <input type="submit" value="Mostrar">
+                        <input type="submit" value="Mostrar" class="button">
                     </form>
                     <br>
                     <form method="POST" action="/getVuelosActualesSalida">
