--- a/templates/vistaClima.html
+++ b/templates/vistaClima.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Filtrado por Aeropuertos</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <style>
-            html,
-            body,
-            h1,
-            h2,
-            h3,
-            h4,
-            h5 {
-                font-family: "Raleway", sans-serif
-            }
-        </style>
-    </head>
+
+<head>
+    <title>Filtrado por Aeropuertos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
 <body class="w3-light-grey">
     <div style="display: flex; align-items: center;">
         <i class="fa-solid fa-plane-circle-check"></i>
@@ -35,11 +27,11 @@
             Temperatura: {{ airport['gmt'] }}<br>
             Visibilidad: {{ airport['geoname_id'] }}<br>
         </li>
-    {% endfor %}
+        {% endfor %}
     </ul>
 
     <form method="GET" action="/">
         <input type="submit" value="Regresar">
     </form>
-    
+
 </body>
