--- a/templates/vistaVuelosActualesSalida.html
+++ b/templates/vistaVuelosActualesSalida.html
@@ -1,50 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Vuelos Actuales</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <style>
-        html,
-        body,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5 {
-            font-family: "Raleway", sans-serif;
-        }
-    </style>
+
 </head>
-<body  class="w3-light-grey">
-    <div class="w3-main" style="margin-left: 300px; margin-top: 43px;">
+
+<body class="w3-light-grey">
+    <div class="w3-main" style="margin-left: 30px; margin-top: 43px;">
         <div class="w3-panel">
-    <h1>Vuelos Actuales: salidas</h1>
-    
-    <table class="w3-table w3-bordered">
-        <tr>
-            <th>Aerolínea</th>
-            <th>Número de Vuelo</th>
-            <th>Destino</th>
-            <th>Hora de salida</th>
-        </tr>
-        
-        {% for flight in flights %}
-        <tr>
-            <td>{{ flight.airline }}</td>
-            <td>{{ flight.flight_iata }}</td>
-            <td>{{ flight.destination }}</td>
-            <td>{{ flight.departure_time }}</td>
-        </tr>
-        {% endfor %}
+            <h1>Vuelos Actuales: salidas</h1>
 
-        <td>----------Ultima linea----------</td>
-    </table>
+            <table class="w3-table w3-bordered">
+                <tr>
+                    <th>Aerolínea</th>
+                    <th>Número de Vuelo</th>
+                    <th>Destino</th>
+                    <th>Hora de salida</th>
+                </tr>
 
-    <form method="GET" action="/">
-        <input type="submit" value="Regresar">
-    </form>
+                {% for flight in flights %}
+                <tr>
+                    <td>{{ flight.airline }}</td>
+                    <td>{{ flight.flight_iata }}</td>
+                    <td>{{ flight.destination }}</td>
+                    <td>{{ flight.departure_time }}</td>
+                </tr>
+                {% endfor %}
+
+                <td>----------Ultima linea----------</td>
+            </table>
+
+            <form method="GET" action="/">
+                <input type="submit" value="Regresar">
+            </form>
 </body>
+
 </html>
