Patrón de diseño Singleton y docu interna
Listo :)

--- a/templates/vistaVuelosRuta.html
+++ b/templates/vistaVuelosRuta.html
@@ -35,6 +35,10 @@
                 </tr>
                 {% endfor %}
             </table>
+            <form method="GET" action="/">
+                <input type="submit" value="Regresar">
+            </form>
+    
 </body>
 
 </html>
